@@ -4,7 +4,7 @@
    * @author Matthew McNaney <mcnaney at gmail dot com>
    */
 
-
+translate('users');
 $tabs[] = array('title' => _('My Page'),
 		'label' => 'my_page',
 		'link'  => 'index.php?module=users&amp;action=user',
@@ -17,5 +17,6 @@ $link[] = array('label'       => _('User Administration'),
 		'image'       => 'users.png',
 		'tab'         => 'admin'
 		);
+translate();
 
 ?>
