@@ -3,7 +3,7 @@
   <module>
     <title>core</title>
     <properName>phpWebSite Core</properName>
-    <version>1.3.1</version>
+    <version>1.4.0</version>
     <url>http://phpwebsite.appstate.edu/downloads/modules/core/</url>
   </module>
 </dependency>
