@@ -32,7 +32,7 @@ class User_Form {
                 return User_Form::loggedOut();
             }
         }
-
+        
         return $form;
     }
 
@@ -53,7 +53,7 @@ class User_Form {
         $template['HOME_USER_PANEL'] = $template['HOME'] = PHPWS_Text::moduleLink(_('Home'));
     
         $usermenu = PHPWS_User::getUserSetting('user_menu');
-
+        translate();
         return PHPWS_Template::process($template, 'users', 'usermenus/' . $usermenu);
     }
 
@@ -90,11 +90,13 @@ class User_Form {
         }
 
         $usermenu = PHPWS_User::getUserSetting('user_menu');
+        translate();
         return PHPWS_Template::process($template, 'users', 'usermenus/' . $usermenu);
     }
 
     function setPermissions($id)
     {
+        translate('users');
         $group = & new PHPWS_Group($id, FALSE);
 
         $modules = PHPWS_Core::getModules();
@@ -145,7 +147,7 @@ class User_Form {
         $tpl->setData($template);
         
         $content = $tpl->get();
-
+        translate();
         return $content;
     }
 
@@ -223,7 +225,7 @@ class User_Form {
     function manageUsers()
     {
         PHPWS_Core::initCoreClass('DBPager.php');
-
+        translate('users');
         $pageTags['USERNAME_LABEL'] = _('Username');
         $pageTags['EMAIL_LABEL'] = _('Email');
         $pageTags['LAST_LOGGED_LABEL'] = _('Last Logged');
@@ -240,6 +242,7 @@ class User_Form {
         $pager->addToggle('class="toggle1"');
         $pager->addToggle('class="toggle2"');
         $pager->setSearch('username', 'email');
+        translate();
         return $pager->get();
     }
 
@@ -247,11 +250,12 @@ class User_Form {
     function manageGroups()
     {
         PHPWS_Core::initCoreClass('DBPager.php');
-
+        translate('users');
         $pageTags['GROUPNAME'] = _('Group Name');
         //    $pageTags['ACTIVE'] = _('Active');
         $pageTags['MEMBERS_LABEL'] = _('Members');
         $pageTags['ACTIONS_LABEL'] = _('Actions');
+        translate();
 
         $pager = & new DBPager('users_groups', 'PHPWS_Group');
         $pager->setModule('users');
@@ -262,6 +266,7 @@ class User_Form {
         $pager->addToggle('class="toggle1"');
         $pager->addToggle('class="toggle2"');
         $pager->addWhere('user_id', 0);
+
         return $pager->get();
     }
 
@@ -273,6 +278,7 @@ class User_Form {
         $form->addHidden('command', 'postMembers');
         $form->addHidden('group_id', $group->getId());
         $form->addText('search_member');
+        translate('users');
         $form->setLabel('search_member', _('Add Member'));
         $form->addSubmit('search', _('Add'));
 
@@ -322,7 +328,7 @@ class User_Form {
 
         $template['CURRENT_MEMBERS_LBL'] = _('Current Members');
         $template['CURRENT_MEMBERS'] = User_Form::getMemberList($group);
-
+        translate();
         $result =  PHPWS_Template::process($template, 'users', 'forms/memberForm.tpl');
 
         return $result;
@@ -332,7 +338,8 @@ class User_Form {
 
     function getMemberList(&$group)
     {
-        PHPWS_Core::initCoreClass("Pager.php");
+        translate('users');
+        PHPWS_Core::initCoreClass('Pager.php');
         $content = NULL;
 
         $result = $group->getMembers();
@@ -350,6 +357,7 @@ class User_Form {
             $vars['action'] = 'admin';
             $vars['command'] = 'dropMember';
             $vars['group_id'] = $group->getId();
+
             foreach ($groupResult as $item){
                 $count++;
                 $vars['member'] = $item['id'];
@@ -376,7 +384,7 @@ class User_Form {
         if (!isset($content)) {
             $content = _('No members.');
         }
-
+        translate();
         if (PEAR::isError($content)) {
             PHPWS_Error::log($content);
             return $content->getMessage();
@@ -389,7 +397,6 @@ class User_Form {
         translate('users');
 
         $form = & new PHPWS_Form;
-
         if ($user->getId() > 0) {
             $form->addHidden('user_id', $user->getId());
             $form->addSubmit('submit', _('Update User'));
@@ -447,6 +454,8 @@ class User_Form {
             $links[] = PHPWS_Text::secureLink(_('Permissions'), 'users', $vars);
         }
 
+        translate();
+
         if (isset($links)) {
             $template['LINKS'] = implode(' | ', $links);
         }
@@ -461,6 +470,7 @@ class User_Form {
 
     function deify(&$user)
     {
+        translate('users');
         if (!$_SESSION['User']->isDeity() || ($user->getId() == $_SESSION['User']->getId())) {
             $content[] = _('Only another deity can create a deity.');
         } else {
@@ -474,12 +484,13 @@ class User_Form {
             $values['authorize'] = '0';
             $content[] = PHPWS_Text::secureLink(_('No, leave them as a mortal.'), 'users', $values);
         }
-
+        translate();
         return implode('<br />', $content);
     }
 
     function mortalize(&$user)
     {
+        translate('users');
         if (!$_SESSION['User']->isDeity()) {
             $content[] = _('Only another deity can create a mortal.');
         }
@@ -495,6 +506,7 @@ class User_Form {
             $values['authorize'] = '0';
             $content[] = PHPWS_Text::secureLink(_('No, leave them as a deity.'), 'users', $values);
         }
+        translate();
         return implode('<br />', $content);
     }
 
@@ -530,11 +542,13 @@ class User_Form {
         $template['LINKS'] = implode(' | ', $links);
 
         $content = PHPWS_Template::process($template, 'users', 'forms/groupForm.tpl');
+        translate();
         return $content;
     }
 
     function memberForm()
     {
+        translate('users');
         $form->add('add_member', 'textfield');
         $form->add('new_member_submit', 'submit', _('Add'));
     
@@ -550,11 +564,12 @@ class User_Form {
             } else
                 $template['LIKE_INSTRUCTION'] = _('No matches found.');
         }
-
+        translate();
     }
 
     function memberListForm($group)
     {
+        translate('users');
         $members = $group->getMembers();
         if (!isset($members)) {
             return _('None found');
@@ -584,8 +599,8 @@ class User_Form {
             $tpl->parseCurrentBlock();
         }
 
+        translate();
         return $tpl->get();
-
     }
 
 
@@ -622,6 +637,7 @@ class User_Form {
         $vars['command'] = 'addMember';
         $vars['group_id'] = $group->getId();
 
+        translate('users');
         foreach ($result as $member){
             if (isset($members)) {
                 if (in_array($member->getId(), $members)) {
@@ -640,7 +656,7 @@ class User_Form {
             }
             $tpl->parseCurrentBlock();
         }
-
+        translate();
         $content = $tpl->get();
         return $content;
     }
@@ -650,6 +666,7 @@ class User_Form {
      */
     function authorizationSetup()
     {
+        translate('users');
         $template = array();
         PHPWS_Core::initCoreClass('File.php');
 
@@ -730,12 +747,13 @@ class User_Form {
       
             $template['auth-rows'][] = $row;
         }
-
+        translate();
         return PHPWS_Template::process($template, 'users', 'forms/authorization.tpl');
     }
 
     function settings()
     {
+        translate('users');
         PHPWS_Core::initModClass('help', 'Help.php');
 
         $content = array();
@@ -792,7 +810,7 @@ class User_Form {
         $form->addTplTag('AFFIRM', _('Yes'));
 
         $template = $form->getTemplate();
-
+        translate();
         return PHPWS_Template::process($template, 'users', 'forms/settings.tpl');
     }
 
@@ -801,7 +819,8 @@ class User_Form {
      */
     function signup_form($user, $message=NULL)
     {
-        $form = & new PHPWS_Form;
+        translate('users');
+        $form = new PHPWS_Form;
         $form->addHidden('module', 'users');
         $form->addHidden('action', 'user');
         $form->addHidden('command', 'submit_new_user');
@@ -848,6 +867,7 @@ class User_Form {
         }
 
         $result = PHPWS_Template::process($template, 'users', 'forms/signup_form.tpl');
+        translate();
         return $result;
     }
 
@@ -859,7 +879,7 @@ class User_Form {
 
     function loginPage()
     {
-
+        translate('users');
         if (isset($_REQUEST['phpws_username'])) {
             $username = $_REQUEST['phpws_username'];
         } else {
@@ -880,6 +900,7 @@ class User_Form {
         $template = $form->getTemplate();
 
         $content = PHPWS_Template::process($template, 'users', 'forms/login_form.tpl');
+        translate();
         return $content;
     }
 
@@ -904,6 +925,8 @@ class User_Form {
             $tpl['MESSAGE'] = $edit_groups->getMessage();
             return $tpl;
         }
+
+        translate('users');
         $view_groups = User_Form::_getNonUserGroups();
 
         $view_matches = $key->getViewGroups();
@@ -956,10 +979,16 @@ class User_Form {
             $tpl['MESSAGE'] = $_SESSION['Permission_Message'];
             unset($_SESSION['Permission_Message']);
         }
+
+        translate();
+
         return $tpl;
     }
 
-    function _createMultiple($group_list, $name, $matches) {
+    function _createMultiple($group_list, $name, $matches)
+    {
+        translate('users');
+
         if (empty($group_list)) {
             return NULL;
         }
@@ -997,7 +1026,7 @@ class User_Form {
             $users = array();
         }
 
-
+        translate();
         if (isset($select)) {
             return sprintf('<select size="5" multiple="multiple" id="%s" name="%s[]">%s</select>',
                            $name, $name, implode("\n", $select));
