@@ -678,6 +678,7 @@ class PHPWS_User {
 
     function disallow($message=null)
     {
+        translate('users');
         if (!isset($message)){
             $message = _('Improper permission level for action requested.');
         }
@@ -789,6 +790,8 @@ class PHPWS_User {
 
     function getUserTpl()
     { 
+        translate('users');
+
         // Don't let a deity change their deity status
         // Don't let non-deities change status
 
@@ -853,7 +856,7 @@ class PHPWS_User {
         if ($this->deity && !Current_User::isDeity()) {
             unset($template['ACTIONS']);
         }
-
+        translate();
         return $template;
     }
 
