@@ -1,3 +1,8 @@
+13 February 2007
++ Added translate function calls in classes and my_page.php
++ my_page hides translation option if language defines disable selection
++ Raised core dependency.
+
 12 January 2007
 + Added a unrestricted only parameter to Current_User's allow and
   authorize functions
